<resources>
    <string name="app_name">Audio Dictionary</string>

<!--    Strings for welcome.xml-->
    <string name="welcome_french">Bonjour!</string>
    <string name="welcome_spanish">Hola!</string>
    <string name="welcome_english">Hello, and welcome to the Audio Dictionary</string>
    <string name="welcome_question">Who are you?</string>
    <string name="welcome_learner">\u0020\u0020Learner\u0020\u0020</string>
    <string name="welcome_Native">\u0020\u0020\u0020Native\u0020\u0020\u0020</string>
    <string name="welcome_logo_descr">audiodictionarylogo_image</string>

<!--    Strings for languages.xml-->
    <string name="languages_title">Languages</string>
    <string name="languages_arabic">Arabic</string>
    <string name="languages_french">French</string>
    <string name="languages_italian">Italian</string>
    <string name="languages_spanish">Spanish</string>

    <!--    Strings for languages.xml and specified_languages.xml -->
    <string name="languages_open">Open</string>

<!--    Strings for login.xml-->
    <string name="login_title">Login</string>
    <string name="login_user">Email</string>
    <string name="login_pass">Password</string>
    <string name="login_submit">Submit</string>
    <string name="login_question">Need to create an account?</string>
    <string name="login_create">\u0020\u0020Create Account\u0020\u0020</string>

<!--    Strings for create_account.xml-->
    <string name="create_title">Create Account</string>
    <string name="create_email">Email</string>
    <string name="create_user">Username</string>
    <string name="create_pass">Password</string>
    <string name="create_create">Create</string>
    <string name="create_email_descr">email_input_descr</string>

<!--    Strings for native_language-->
    <string name="native_language_eng">English</string>
    <string name="native_language_add_btn">Add</string>
    <string name="native_language_content_descr">native_lang_descr</string>

<!--    Strings for menu.xml -->
    <string name="menu_exit">Exit Session</string>

<!--    Strings for vocab_list.xml -->
    <string name="vocab_word">Word</string>
    <string name="vocab_button">View</string>

<!--    Strings for create_audio.xml-->
    <string name="audio_title">Create Audio</string>
    <string name="audio_start">\u0020\u0020Start Recording\u0020\u0020</string>
    <string name="audio_stop">\u0020\u0020Stop Recording\u0020\u0020</string>
    <string name="audio_play">\u0020\u0020Play Recording\u0020\u0020</string>
    <string name="audio_add">\u0020\u0020Add Recording\u0020\u0020</string>
    <string name="audio_explanation">Delivery Instructions:</string>
    <string name="audio_explanation2">First say the word in English, then in</string>
    <string name="audio_explanation3">your Native Language</string>
    <string name="audio_mic_direct">Tap the microphone to start/stop recording</string>
    <string name="audio_mic_explanation">microphone_image</string>
    <string name="audio_ring_explanation">ring_image</string>

<!--    Strings for native_word_details-->
    <string name="native_word_add_audio">\u0020Add Recording\u0020</string>

<!--    Strings for audio_list-->
    <string name="audio_list_user">User:\u0020</string>
    <string name="audio_list_rate">Rating:\u0020</string>
    <string name="audio_list_play">Play\u0020</string>

    <!-- Search bar -->
    <string name="search_hint">Search for a word</string>
    <string name="search_title">Search results</string>

    <!-- Ratings bar; may not need this -->
    <string name="rate_label">Rate:</string>

</resources>